--- a/lang/bootstrap/src/2-parser/grammar.txt
+++ b/lang/bootstrap/src/2-parser/grammar.txt
@@ -44,6 +44,7 @@ EXPRESSION -> opar EXPRESSION cpar #expr_par
 %left id
 EXPRESSION -> id #expr_id
 EXPRESSION -> atsymbol #expr_at
+EXPRESSION -> dot id #expr_local
 
 # Struct instantiation
 EXPRESSION -> STRUCT_INST #expr_struct_inst
@@ -55,6 +56,7 @@ STRUCT_FIELD_INST -> EPSILON #struct_field_inst_null
 
 # Pathing
 %left dot
+%prefer 1
 EXPRESSION -> EXPRESSION dot id #expr_dot
 
 # Function call
