Everyone would heavily dislike this

--- a/lang/bootstrap/src/2-parser/grammar.txt
+++ b/lang/bootstrap/src/2-parser/grammar.txt
@@ -44,6 +44,7 @@ EXPRESSION -> opar EXPRESSION cpar #expr_par
 %left id
 EXPRESSION -> id #expr_id
 EXPRESSION -> atsymbol #expr_at
+EXPRESSION -> dot #expr_self
 EXPRESSION -> dot id #expr_local
 
 # Struct instantiation
