--- a/lang/bootstrap/test.1
+++ b/lang/bootstrap/test.1
@@ -4,19 +4,21 @@ struct Number { a: word, }
 
 impl Number {
     @static
-    fn make(n: word) -> @: @ { a: n, };
+    fn new(n: word) -> @: @ { a: n, };
 
-    fn times(n: word) -> @: @.make(.a * n);
+    fn times(n: word) -> @: @.new(.a * n);
     fn square -> @: .times(.a);
     fn get -> word: .a;
-}
+    fn exit: c_exit(.get());
 
-fn exit_number(n: Number): c_exit(n.get());
-
-impl Number {
-    fn exit: exit_number(.);
+    //fn __bool__ -> bool: .a;
+    fn __plus__(rhs: Number) -> Number: @.new(.a + rhs.a);
+    //fn __minus__(rhs: Number) -> Number: @.new(.a - rhs.a);
+    //fn __star__(rhs: Number) -> Number: @.new(.a * rhs.a);
+    //fn __slash__(rhs: Number) -> Number: @.new(.a / rhs.a);
 }
 
 fn main {
-    Number.make(3).times(2).square().exit();
+    let n = Number.new(3).times(2).square();
+    (n + Number.new(2)).exit();
 }
