--- a/lang/bootstrap/test.1
+++ b/lang/bootstrap/test.1
@@ -1,9 +1,13 @@
 extern c_exit(retval: word);
 
 fn main {
-    let a = false;
-    let b = true;
-    if a c_exit(0);
-    elif b c_exit(1);
-    else c_exit(2);
+    let+ ret = 0;
+    let+ i = 0;
+    while (1) {
+        ret += i;
+        i += 1;
+        if i == 10 break;
+    }
+
+    c_exit(ret);
 }
