--- a/lang/bootstrap/test.1
+++ b/lang/bootstrap/test.1
@@ -4,8 +4,7 @@ fn main {
     let+ ret = 0;
     let+ i = 0;
     while (1) {
-        ret += i;
-        i += 1;
+        ret += i++;
         if i == 10 break;
     }
 
